style: fix overflow hidden

--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -37,7 +37,6 @@
     border-radius: 0px 0px 255px 255px/0px 0px 5px 5px;
     border-width: 0px 0px 5px 0px;
     border-color: #84cc16;
-    overflow: hidden;
 }
 
 .highlight {
